add correct roles to HTML elements to improve the navbar accessibility for screen-reader users on mobile. Fixes accessibility issues raised in SUPPORT-20260 and SUPPORT-20265/NRW bug ref 169655

--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -70,6 +70,8 @@ services:
       - ./nrw/geonetwork/catalog/components/common/savedselections/partials/action.html:/var/lib/jetty/webapps/geonetwork/catalog/components/common/savedselections/partials/action.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-signin.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-signin.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
+      - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-languages.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-languages.html
+      - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-search.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-search.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/top-toolbar.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/top-toolbar.html
       - ./nrw/geonetwork/catalog/components/pages/partials/top.html:/var/lib/jetty/webapps/geonetwork/catalog/components/pages/partials/top.html
       - ./nrw/geonetwork/catalog/components/pages/partials/menu-page.html:/var/lib/jetty/webapps/geonetwork/catalog/components/pages/partials/menu-page.html
