--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -89,6 +89,8 @@ services:
       - ./nrw/geonetwork/xslt/services/pdf/metadata-fop.xsl:/var/lib/jetty/webapps/geonetwork/xslt/services/pdf/metadata-fop.xsl
       - ./nrw/geonetwork/xslt/services/pdf/portal-present-fop.xsl:/var/lib/jetty/webapps/geonetwork/xslt/services/pdf/portal-present-fop.xsl
       ## functionality changes (*.js files) ##
+      # add language to permalink URL
+      - ./nrw/geonetwork/catalog/components/utility/UtilityService.js:/var/lib/jetty/webapps/geonetwork/catalog/components/utility/UtilityService.js
       # add guid to facets
       - ./nrw/geonetwork/catalog/components/elasticsearch/directives/partials/FacetDirective.js:/var/lib/jetty/webapps/geonetwork/catalog/components/elasticsearch/directives/FacetDirective.js
       # remove hotkey to navigate to the map page
