--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -61,6 +61,7 @@ services:
       - ./nrw/geonetwork/catalog/components/search/mdview/partials/datapreview.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/mdview/partials/datapreview.html
       - ./nrw/geonetwork/catalog/components/search/mdview/partials/keywordBadges.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/mdview/partials/keywordBadges.html
       - ./nrw/geonetwork/catalog/components/search/mdview/partials/contact.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/mdview/partials/contact.html
+      - ./nrw/geonetwork/catalog/components/search/mdview/partials/morelikethis.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/mdview/partials/morelikethis.html
       - ./nrw/geonetwork/catalog/components/search/resultsview/partials/templateswitcher.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/resultsview/partials/templateswitcher.html
       - ./nrw/geonetwork/catalog/components/search/resultsview/partials/viewtemplates/grid.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/resultsview/partials/viewtemplates/grid.html
       - ./nrw/geonetwork/catalog/components/search/resultsview/partials/selection-widget.html:/var/lib/jetty/webapps/geonetwork/catalog/components/search/resultsview/partials/selection-widget.html
