--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -73,6 +73,7 @@ services:
       - ./nrw/geonetwork/catalog/components/elasticsearch/directives/partials/facet.html:/var/lib/jetty/webapps/geonetwork/catalog/components/elasticsearch/directives/partials/facet.html
       - ./nrw/geonetwork/catalog/components/metadataactions/partials/metadataCard.html:/var/lib/jetty/webapps/geonetwork/catalog/components/metadataactions/partials/metadataCard.html
       - ./nrw/geonetwork/catalog/components/common/savedselections/partials/action.html:/var/lib/jetty/webapps/geonetwork/catalog/components/common/savedselections/partials/action.html
+      - ./nrw/geonetwork/catalog/components/common/map/partials/drawbbox.html:/var/lib/jetty/webapps/geonetwork/catalog/components/common/map/partials/drawbbox.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-signin.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-signin.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
       - ./nrw/geonetwork/catalog/components/toolbar/partials/menu-languages.html:/var/lib/jetty/webapps/geonetwork/catalog/components/toolbar/partials/menu-languages.html
