--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ certs/letsencrypt
 certs/cacerts
 kibana/kibana.yml
 kibana/export.ndjson
-astun/*
-scotgov/*
-nginx/servers/*
+astun/
+scotgov/
+nginx/servers/
 nginx/root/robots.txt
 nrw/nginx/servers/cyfoethnaturiol_cymru.inc
