--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -2,6 +2,7 @@ version: '3'
 
 volumes:
   pgdata:
+  pglogs:
 
 services:
   postgres:
@@ -26,7 +27,7 @@ services:
                    "-c", "max_connections=200" ]
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - /data/postgres/logs:/var/log/postgresql
+      - pglogs:/var/log/postgresql
       #- ./postgresql/audit.sql:/docker-entrypoint-initdb.d/1-audit.sql
     logging:
           driver: "json-file"
