reduce kibana logging level

--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -5,7 +5,7 @@ kibana.index: ".dashboards"
 server.name: kibana
 server.host: "0.0.0.0"
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-logging.quiet: false
+logging.quiet: true
 csp.rules: ["frame-src 'self' ${SERVER_PUBLICBASEURL}"]
 csp.warnLegacyBrowsers: false
 elasticsearch.username: "elastic"
